[gd_scene load_steps=8 format=3 uid="uid://c8xa3or1a7jk4"]

[ext_resource type="Script" uid="uid://viwcms5ga2qk" path="res://Scripts/UI/MainMenuTest.gd" id="1_4jqr8"]
[ext_resource type="FontFile" uid="uid://bym20gfvfp1uq" path="res://Assets/Fonts/Jersey10-Regular.ttf" id="2_04clx"]
[ext_resource type="LabelSettings" uid="uid://daq6r8f2afl8c" path="res://Assets/Fonts/MainTitle.tres" id="2_wefij"]
[ext_resource type="LabelSettings" uid="uid://bikre5jifcmb0" path="res://Assets/HUD2.tres" id="3_wefij"]
[ext_resource type="Script" uid="uid://bqe472hrtenbq" path="res://Scripts/Enemies/BackgroundEnemySpawner.gd" id="5_nxm3x"]
[ext_resource type="PackedScene" uid="uid://ey8mhb2634kr" path="res://Scenes/Enemies/BackgroundEnemy.tscn" id="6_f87uj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nxm3x"]

[node name="MainMenuTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4jqr8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Header" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
z_index = 5
layout_mode = 2
text = "RETRO HORDE"
label_settings = ExtResource("2_wefij")
horizontal_alignment = 1

[node name="Center" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0
alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/Center"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../UpgradesButton")
focus_next = NodePath("../UpgradesButton")
focus_previous = NodePath("../QuitButton")
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 0.2627451, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.2627451, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_04clx")
theme_override_font_sizes/font_size = 31
theme_override_styles/focus = SubResource("StyleBoxEmpty_nxm3x")
toggle_mode = true
text = "PLAY"
flat = true
alignment = 0

[node name="UpgradesButton" type="Button" parent="MarginContainer/VBoxContainer/Center"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_bottom = NodePath("../OptionsButton")
focus_next = NodePath("../OptionsButton")
focus_previous = NodePath("../PlayButton")
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 0.2627451, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.2627451, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_04clx")
theme_override_font_sizes/font_size = 31
theme_override_styles/focus = SubResource("StyleBoxEmpty_nxm3x")
text = "RECORDS"
flat = true
alignment = 0

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer/Center"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_top = NodePath("../UpgradesButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../UpgradesButton")
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 0.2627451, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.2627451, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_04clx")
theme_override_font_sizes/font_size = 31
theme_override_styles/focus = SubResource("StyleBoxEmpty_nxm3x")
text = "OPTIONS"
flat = true
alignment = 0

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/Center"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_bottom = NodePath("../PlayButton")
focus_next = NodePath("../PlayButton")
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 0.2627451, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.2627451, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_04clx")
theme_override_font_sizes/font_size = 31
theme_override_styles/focus = SubResource("StyleBoxEmpty_nxm3x")
text = "QUIT"
flat = true
alignment = 0

[node name="Footer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PublisherLabel" type="Label" parent="MarginContainer/VBoxContainer/Footer"]
layout_mode = 2
size_flags_horizontal = 3
text = "BIPBOOP.io"
label_settings = ExtResource("3_wefij")

[node name="VersionLabel" type="Label" parent="MarginContainer/VBoxContainer/Footer"]
layout_mode = 2
size_flags_horizontal = 3
text = "v.0.1"
label_settings = ExtResource("3_wefij")
horizontal_alignment = 2

[node name="BackgroundSpawner" type="Node2D" parent="."]
z_index = 6
position = Vector2(-1, 0)
script = ExtResource("5_nxm3x")
background_enemy_scene = ExtResource("6_f87uj")
enemy_count = 20

[connection signal="pressed" from="MarginContainer/VBoxContainer/Center/PlayButton" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Center/UpgradesButton" to="." method="_on_upgrades_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Center/OptionsButton" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Center/QuitButton" to="." method="_on_quit_pressed"]
